# plato

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.html  structure.xlsx  utils_data_diff.txt
.doctrees/: environment.pickle  index.doctree  setup.doctree
.doctrees/api/: index.doctree
.github/workflows/: deploy.yml
Other/: options.xlsx
_modules/: index.html
_modules/plato/: globe.html  grids.html  optimisation.html  plate_torques.html  plates.html  plot.html  points.html  slabs.html
_sources/: api.rst.txt  index.rst.txt
_static/: documentation_options.js
api/: api.html  grids.html  index.html
api/globe/: globe-index.html  index.html
api/grids/: index.html
api/optimise/: index.html
api/plate_torques/: index.html
api/plates/: index.html  plates-index.html
api/plot/: index.html  plot.html
api/points/: index.html  points-index.html
api/slabs/: index.html  slabs-index.html  slabs.html
docs/: Makefile
docs/source/: conf.py  index.rst  setup.rst
doctrees/: api.doctree  environment.pickle  index.doctree
doctrees/api/: api.doctree  grids.doctree  index.doctree
notebooks/: 04b-Slab_pull_optimisation.ipynb  04c-Slab_pull_optimisation.ipynb  05a-Effects_of_sediment_subduction.ipynb  settings.xlsx
plato/: __init__.py  _version.py  deleted_functions.py  environment.yml  globe.py  grids.py  optimisation.py  plate_forces.py  plate_torques.py  plates.py  plot.py  points.py  reconstruction.py  settings.py  setup.py  setup_parallel.py  slabs.py  test_NNR.py  utils_calc.py  utils_data.py  utils_init.py  utils_opt.py
tests/: cases_test.xlsx  error.txt  functions_test.py  get_plate_boundaries.py  lat.txt  test_NNR.py  test_cratonic_keels.py  test_inversion.py  test_keels.py  test_modules.py  test_opt.py  test_rotation.py  test_sp_opt.py  test_synthetic_velocity.py  test_thorsten.py  test_torque_optimisation.py
tests/data/: sed_thick_0.2d_0.nc  (+1 more)
(+292 files in other folders)
